syntax = "proto3";

option csharp_namespace = "SensorsService";

import "empty.proto";
import "any.proto";
import "timestamp.proto";

package sensors;

service Sensors {
	//Sensors methods
	rpc GetMonitoringTree (google.protobuf.Empty) returns (SensorsUpdateMessage);
	rpc GetMonitoringUpdates (google.protobuf.Empty) returns (SensorsUpdateMessage);
	rpc GetSensorHistory (GetSensorHistoryMessage) returns (SensorsUpdateMessage);

	//Products methods
	rpc GetProductsList (google.protobuf.Empty) returns (ProductsListMessage);
	rpc AddNewProduct (AddProductMessage) returns (AddProductResultMessage);
	rpc RemoveProduct (RemoveProductMessage) returns (RemoveProductResultMessage);
	
	//Certificates
	rpc GenerateServerCertificate (CertificateRequestMessage) returns (GenerateServerCertificateResulMessage);
	rpc SignClientCertificate (CertificateSignRequestMessage) returns (SignedCertificateMessage);

	//Admin methods
	rpc CheckServerAvailable (google.protobuf.Empty) returns (ServerAvailableMessage);
}

message SensorsUpdateMessage {
	repeated SensorUpdateMessage sensors = 1;
}

message SensorUpdateMessage {
	string Name = 1;
	string Path = 2;
	string Product = 3;
	enum TransactionType {
		TRANS_NONE = 0;
		TRANS_ADD = 1;
		TRANS_REMOVE = 2;
		TRANS_UPDATE = 3;
	}
	TransactionType ActionType = 4;
	enum SensorObjectType {
		OBJECT_TYPE_NONE = 0;
		OBJECT_TYPE_BOOL_SENSOR = 1;
		OBJECT_TYPE_INT_SENSOR = 2;
		OBJECT_TYPE_DOUBLE_SENSOR = 3;
		OBJECT_TYPE_STRING_SENSOR = 4;
		OBJECT_TYPE_BAR_DOUBLE_SENSOR = 5;
		OBJECT_TYPE_BAR_INT_SENSOR = 6;
	}
	SensorObjectType ObjectType = 5;
	bytes dataObject = 6;
	google.protobuf.Timestamp time = 7;
}

message ProductsListMessage {
	repeated ProductDataMessage products = 1;
}

message ProductDataMessage {
	string Name = 1;
	string Key = 2;
	google.protobuf.Timestamp DateAdded = 3;
}

message AddProductMessage {
	string name = 1;
}

message AddProductResultMessage {
	bool result = 1;
	string error = 2;
	ProductDataMessage productData = 3;
}

message RemoveProductMessage {
	string name = 1;
}

message RemoveProductResultMessage {
	bool result = 1;
	string error = 2;
	ProductDataMessage productData = 3;
}

message GetSensorHistoryMessage {
	string name = 1;
	string product = 2;
	int64 n = 3;
}

message ClientCertificateMessage {
	bytes certificateBytes = 1;
}

message GenerateServerCertificateResulMessage {
	bool result = 1;
	string error = 2;
}

message CertificateRequestMessage {
	string countryName = 1;
	string stateOrProvinceName = 2;
	string localityName = 3;
	string OrganizationName = 4;
	string OrganizationUnitName = 5;
	string CommonName = 6;
	string EmailAddress = 7;
}

message ServerAvailableMessage {
	google.protobuf.Timestamp time = 1;
}

message CertificateSignRequestMessage {
	string subject = 1;
	RSAParameters RSAParameters = 2;
	string CommonName = 3;
}

message RSAParameters {
	bytes inverseQ = 1;
	bytes D = 2;
	bytes DP = 3;
	bytes DQ = 4;
	bytes exponent = 5;
	bytes modulus = 6;
	bytes P = 7;
	bytes Q = 8;
}

message SignedCertificateMessage {
	bytes signedCertificateBytes = 1;
	bytes caCertificateBytes = 2;
}